cluster/apps/networking/sso/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-sso
  namespace: networking
  labels:
    app: traefik-sso
spec:
  template:
    metadata:
      labels:
        name: traefik-sso
        app: traefik-sso
    spec:
      containers:
        - name: traefik-sso
          image: thomseddon/traefik-forward-auth:2
          imagePullPolicy: Always
          ports:
            - containerPort: 4181
---
kind: Service
apiVersion: v1
metadata:
  namespace: networking
  name: traefik-sso
spec:
  selector:
    app: traefik-sso
  ports:
    - protocol: TCP
      port: 4181
      targetPort: 4181
